--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  geolocator: ^7.2.0+1
+  geolocator: ^6.2.1
   dio: ^4.0.0
   get: ^4.1.4
   google_fonts: ^2.1.0
