--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/2.jpg
+  - assets/1.jpg
+  - assets/3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
